# checkstatus-govbr

./: .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  .vercelignore  Dockerfile.api  Dockerfile.frontend  Dockerfile.pipeline  Dockerfile.scheduler  Makefile  README.md  docker-compose.yaml  env-template  fly.toml  package.json  pyproject.toml  setup.cfg
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: api-main.yaml  api-pr.yaml  api-test.yaml  pipeline-main.yaml  pipeline-pr.yaml  pipeline-test.yaml  plantuml.yaml  scheduler-main.yaml  scheduler-pr.yaml
api/: Dockerfile  alembic.ini  fly.toml  pyproject.toml  settings.ini  setup.cfg
api/migrations/: env.py
api/migrations/versions/: 536d53c5f4d1_initial_domain_model.py  86f8fff08103_add_available_column.py  99a7a873ed25_.py
api/postgres/: Dockerfile
api/src/: main.py  models.py  routes.py  schemas.py  services.py
api/src/core/: config.py  database.py
api/tests/: conftest.py  test_models.py  test_routes.py  test_schemas.py  test_services.py
docs/: Dockerfile
docs/assets/diagrams/: context.puml  system.puml
frontend/: .gitignore  Dockerfile  next.config.js  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json
frontend/src/app/: context.tsx  globals.css  layout.tsx  page.module.css  page.tsx  skeleton.tsx
frontend/src/app/api/: route.ts
frontend/src/app/sentry-example-page/: page.jsx
frontend/src/components/card/: index.tsx
frontend/src/components/domains/: index.tsx
frontend/src/components/domains-filters/: index.tsx
frontend/src/components/domains-header/: index.tsx
frontend/src/components/dropdown/: index.tsx
frontend/src/components/ganalytics/: index.tsx
frontend/src/components/header/: index.tsx
frontend/src/components/inputsearch/: index.tsx
frontend/src/components/navbar/: index.tsx
frontend/src/components/pagination/: index.tsx
frontend/src/components/skeleton/: index.tsx
frontend/src/utils/: index.ts  types.ts
lib/: database.py
lib/python/: availability.py  database.py
lib/typescript/: database.ts
pipeline/: Dockerfile  pyproject.toml  setup.cfg
pipeline/data/: domains.csv
pipeline/src/: cancelled_domains.py  collect_csv.py  collect_rdap.py  ingestion.py  main.py  normalize.py  ping.py  utils.py
pipeline/src/sample_data/: domains.csv
pipeline/tests/: conftest.py  test_cancelled_domains.py  test_collect_csv.py  test_collect_rdap.py  test_ingestion.py  test_normalize.py  test_unit_ingestion.py
scheduler/: Dockerfile  README.md  package.json  pyproject.toml  tsconfig.json
scheduler/src/: cancelled_domains.py  index.ts  main.py  ping.py  service.ts
scheduler/src/availability/: index.test.ts  index.ts
scheduler/tests/: test_cancelled_domains.py  test_ping.py
scheduler_py/: pyproject.toml
scheduler_py/src/: main.py  ping.py
scheduler_py/tests/: test_ping.py
scheduler_ts/: bun.lockb  package.json  tsconfig.json
shared/chunk/: package.json  tsconfig.json
shared/chunk/src/: index.test.ts  index.ts
shared/database_ts/: package.json  tsconfig.json
shared/database_ts/src/: client.test.ts  client.ts  index.ts
