[tool.poetry]
name = "checkstatusgovbr-api"
version = "0.1.0"
description = "API do Checkstatus .gov.br"
authors = ["Gilson Filho <me@gilsondev.in>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
requests = "^2.28.1"
psycopg2-binary = "^2.9.4"
sqlalchemy-utils = "^0.39.0"
fastapi-pagination = "^0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
mypy = "^0.982"
types-requests = "^2.28.11"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.41"}
freezegun = "^1.2.2"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = [
  "sqlalchemy.ext.mypy.plugin"
]
exclude = [
  "^tests/$",
  "^migrations/$"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
